--- a/app/app.css
+++ b/app/app.css
@@ -3,30 +3,71 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-	font-family: 'Barlow', sans-serif;
 	font-family: 'Fraunces', serif;
 }
 
 
 :root{
-	--red : hsl(7, 99%, 70%) ;
-	--yellow : hsl(51, 100%, 49%);
-	--s: hsl(198, 62%, 26%);
-	--s : hsl(168, 34%, 41%);
-	--titulo : hsl(212, 27%, 19%);
-	--parrafo : hsl(213, 9%, 39%);
-	--s : hsl(232, 10%, 55%);
+	--rojo : hsl(7, 99%, 70%);
+	--amarillo : hsl(51, 100%, 49%);
+	--parrafo : hsl(167, 40%, 24%);
+	--titulo : hsl(198, 62%, 26%);
+	--verde : rgb(69, 140, 126);
+
+
+	--titulo1 : hsl(212, 27%, 19%);
+	--gris-oscuro : hsl(213, 9%, 39%);
+	--gris-claro : hsl(232, 10%, 55%);
+	--titulo2: hsl(210, 4%, 67%);
 	--blanco : hsl(0, 0%, 100%);
+	
 }
 
+.nav__contenedor{
+	background: var(--blanco);
+	margin: 20px;
+	padding: 30px;
+	position: relative;
+	z-index: 100;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 35px;
+	border-radius: 3px;
+	display: none;
+	box-shadow: 0px 0px 5px #0005;
+
+}
+
+.active .nav__contenedor{
+	display: flex;
+}
+
+.nav__link{
+	font-family: 'Barlow', sans-serif;
+	text-align: center;
+	text-decoration: none;
+	font-weight: 600;
+	color: var(--parrafo);
+	font-size: 18px;
+}
+
+.yellow{
+	background: var(--amarillo);
+	border-radius: 100px;
+	padding: 15px 35px;
+	text-transform: uppercase;
+
+}
 body{
-	background: #000;
 	display: flex;
 	justify-content: center;
+	background: var(--blanco);
 }
 
 .contenedor__flex{
-	width: 375px;
+	min-width: 300px;
+	width: 400px;
 	display: flex;
 	flex-direction: column;
 
@@ -43,13 +84,14 @@ body{
 
 .header__titulo{
 	text-align: center;
-	font-size: 40px;
+	font-size: 35px;
 	text-transform: uppercase;
 	font-weight: 900;
 	position: absolute;
-	bottom: 55%;
+	bottom: 50%;
     color: var(--blanco);
 	letter-spacing: 6px;
+
 
 }
 
@@ -68,6 +110,9 @@ body{
 	justify-content: space-between;
 	margin: 30px 20px;
 }
+.boton__hamburguesa{
+	cursor: pointer;
+}
 .section__imagen{
 	width: 100%;
 	vertical-align: middle;
@@ -85,7 +130,7 @@ body{
 	flex-direction: column;
 	gap: 20px;
 	align-items: center;
-	background: #fff;
+
 }
 .section__parrafo{
 	font-size: 19px;
@@ -111,9 +156,133 @@ body{
 	position: absolute;
 	top: 54%;
 }
-.fruta__titulo{
 
-}
 .fruta__parrafo{
 	font-size: 15px;
+}
+
+.section__clientes{
+	display: flex;
+	flex-direction: column;
+	gap: 60px;
+	padding: 70px 20px;
+	background: var(--blanco);
+}
+.section__clientes-titulo{
+	text-align: center;
+	color: var(--titulo2);
+	font-family: 'Fraunces', serif;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	font-size: 19px;
+
+
+}
+.section__clientes-contenido{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
+	color: #eeee;
+}	
+
+.section__clientes-img{
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+}
+.section__clientes-parrafo{
+	font-size: 18px;
+	color: var(--parrafo);
+	text-align: center;
+	font-family: 'Barlow', sans-serif;
+	font-weight: 600;
+	line-height: 25px;
+
+}
+.section__clientes-info{
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+}
+.section__clientes-info-nombre{
+	font-weight: 900;
+	color: var(--titulo1);
+}
+.section__clientes-info-profesion{
+	color: var(--gris-oscuro );
+	font-family: 'Barlow', sans-serif;
+	font-weight: 600;
+
+}
+.section__imagenes{
+	display: flex;
+	flex-wrap: wrap;
+}
+.section__imagenes-img{
+	width: 100%;
+	min-width: 150px;
+	flex: 1;
+
+}
+
+.footer{
+	display: flex;
+	flex-direction: column;
+	gap: 50px;
+	padding: 50px 25px;
+	background: rgb(144 ,212, 197);
+
+
+
+}
+.footer__logo{
+	display: inline-flex;
+	justify-content: center;
+}
+.footer__contenido{
+	display: flex;
+	justify-content: space-around;
+}
+.footer__link{
+	font-family: 'Barlow', sans-serif;
+	text-decoration: none;
+	color: var(--verde);
+	font-weight: 600;
+}
+.footer__redes{
+	width: 50%;
+	display: flex;
+	justify-content: space-between;
+	margin: auto;
+	cursor: pointer;
+}
+.desktop{
+	display: none;
+}
+
+@media screen and (min-width:800px){
+
+
+	.mobile{
+		display: none;
+	}
+	.desktop{
+		display: block;
+	}
+	.contenedor__flex{
+		width: 100%;
+	}
+	.principal{
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr 1fr 1fr;
+	}
+	.section__cliente{
+		display: flex;
+		flex-direction: row;
+	}
+	
 }
