--- a/app/_main.scss
+++ b/app/_main.scss
@@ -140,5 +140,6 @@ $seccion__personas-info-titulo : hsl(232, 10%, 55%);
 }
 .seccion__galeria-imagen{
     min-width: 155px;
+    min-height: 155px;
     flex: 1;
 }
