--- a/app/_nav.scss
+++ b/app/_nav.scss
@@ -23,7 +23,7 @@ $seccion__parrafo : hsl(213, 9%, 39%);
     flex-direction: column;
     padding: 30px;
     display: none;
-    bottom: 90px;
+    top: 100px;
     text-align: center;
     z-index: 100;
 }
