--- a/app/app.css
+++ b/app/app.css
@@ -58,7 +58,7 @@
           flex-direction: column;
   padding: 30px;
   display: none;
-  bottom: 90px;
+  top: 100px;
   text-align: center;
   z-index: 100;
 }
@@ -366,15 +366,15 @@
   color: white;
 }
 
+.desktop {
+  display: none;
+}
+
 * {
   padding: 0;
   margin: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-.contenedor__flex1 {
-  display: none;
 }
 
 body {
@@ -387,11 +387,156 @@ body {
 }
 
 .contenedor__flex {
-  max-width: 450px;
   background: white;
 }
 
 .nav__desktop {
   display: none;
+}
+
+@media screen and (min-width: 600px) {
+  .mobile {
+    display: none;
+  }
+  .contenedor__flex {
+    width: 100%;
+  }
+  .header {
+    background-image: url("../images/desktop/image-header.jpg");
+    height: 100vh;
+  }
+  .header__titulo {
+    margin-top: 55px;
+    font-size: 45px;
+  }
+  .header__icono {
+    bottom: 0px;
+  }
+  .nav__desktop {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding: 40px;
+  }
+  .nav__desktop-lista {
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .nav__desktop-link {
+    text-decoration: none;
+    color: #5a636c;
+    padding: 10px 30px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    font-size: 17px;
+  }
+  .nav__desktop-link-modificado {
+    background: #fff;
+    border-radius: 100px;
+    padding: 13px 20px;
+    color: #23303e;
+    font-family: 'Fraunces', serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: 900;
+    -webkit-transition: opacity .3s;
+    transition: opacity .3s;
+  }
+  .seccion__Transform {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .seccion__texto {
+    padding: 10%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    max-width: 50%;
+    min-width: 500px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .seccion__imagen {
+    min-width: 400px;
+    max-width: 50%;
+    min-width: 500px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .seccion__titulo {
+    text-align: left;
+    font-size: 40px;
+  }
+  .seccion__parrafo {
+    text-align: left;
+  }
+  .seccion__audience {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .contenedor__fruta {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .seccion__fruta {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .seccion__fruta-imagen {
+    max-width: 100%;
+    min-width: 500px;
+  }
+  .seccion__fruta-texto {
+    width: 50%;
+  }
+  .seccion__fruta {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .seccion__personas {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=app.css.map */
