--- a/app/_main.scss
+++ b/app/_main.scss
@@ -5,6 +5,9 @@ $seccion__titulo : hsl(212, 27%, 19%);
 $seccion__parrafo : hsl(213, 9%, 39%);
 $seccion__fruta-titulo : hsl(210, 4%, 67%);
 $seccion__personas-info-titulo : hsl(232, 10%, 55%);
+$amarillo : hsl(51, 100%, 49%);
+$rojo : hsl(7, 99%, 70%);
+
 
 
 
@@ -44,13 +47,35 @@ $seccion__personas-info-titulo : hsl(232, 10%, 55%);
 .seccion__link{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    position: relative;
 }
 .seccion__link-info{
     text-decoration: none;
-    font-weight: 600;
+    font-weight: 900;
 	font-family: 'Fraunces', serif;
     text-transform: uppercase;
     font-size: 15px;
+    position: relative;
+    z-index: 100;
+    color: $seccion__titulo;
+}
+.linea{
+    width: 100%;
+    height: 5px;
+    border-radius: 50px;
+    position: absolute;
+    bottom: 2px;
+
+}
+.amarillo{
+    background-color: $amarillo;
+    opacity: .5;
+}
+.rojo{
+    background-color: $rojo;
+    opacity: .5;
+
 }
 .seccion__fruta{
     position: relative;
@@ -83,11 +108,13 @@ $seccion__personas-info-titulo : hsl(232, 10%, 55%);
     font-weight: 600;
     font-size: 15px;
 }
-
+.seccion__contenedor{
+    padding: 50px 20px;
+}
 .seccion__personas{
     display: flex;
     flex-direction: column;
-    padding: 70px 20px;
+    padding: 70px 0px;
     gap: 50px;
 }
 .seccion__personas-titulo{
